--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3.1'
+version: "3.1"
 
 services:
-  db:  
+  db:
     image: mysql:5.7
     environment:
       - MYSQL_ROOT_PASSWORD=rahasia
